@@ -7,6 +7,8 @@ $Id$
 Changes since 1.4.0:
 
 * Added VoE protocol support.
+* Separated datagram initialization from filling the payload with zeros.
+  Introduced new method ec_datagram_zero() for that.
 * Added phy_read and phy_write commands to ethercat tool.
 
 Changes in version 1.4.0-rc2:
